[gd_scene load_steps=8 format=3 uid="uid://dqy5gsnibni5l"]

[ext_resource type="Script" path="res://scenes/ui/performance_counter.gd" id="1_yqb66"]
[ext_resource type="AudioStream" uid="uid://toqn7nqo322h" path="res://assets/audio/sfx/volume_appear.ogg" id="2_s5ctp"]
[ext_resource type="FontFile" uid="uid://d2n5gv6tiowah" path="res://assets/fonts/vcr.ttf" id="2_w4tef"]
[ext_resource type="AudioStream" uid="uid://btaoww5eaxduc" path="res://assets/audio/sfx/volume_change.ogg" id="3_6m2cv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ip6fy"]
bg_color = Color(0, 0, 0, 1)
skew = Vector2(-0.3, 0)
border_color = Color(0, 0, 0, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dchgc"]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)
skew = Vector2(-0.3, 0)
border_color = Color(0, 0, 0, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_4lpgh"]
font = ExtResource("2_w4tef")
font_size = 20
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="performance_counter" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_yqb66")

[node name="update_timer" type="Timer" parent="."]

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="perf_label" type="RichTextLabel" parent="ui"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.246
anchor_bottom = 0.437
offset_right = 0.0879822
offset_bottom = 0.359985
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "N/A FPS"
autowrap_mode = 2

[node name="volume_bar" type="ProgressBar" parent="ui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.858
anchor_top = 0.01
anchor_right = 0.996
anchor_bottom = 0.039
offset_left = -0.376099
offset_top = -0.2
offset_right = 0.0878906
offset_bottom = -0.0799999
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ip6fy")
theme_override_styles/fill = SubResource("StyleBoxFlat_dchgc")
value = 50.0
show_percentage = false

[node name="bus_label" type="Label" parent="ui/volume_bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
text = "N/A%
Bus: N/A [TAB]"
label_settings = SubResource("LabelSettings_4lpgh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_lock_ = true

[node name="volume_sounds" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("volume_appear", "volume_change"), [ExtResource("2_s5ctp"), ExtResource("3_6m2cv")]]
